--- a/src/pages/brothers/brothers.html
+++ b/src/pages/brothers/brothers.html
@@ -6,7 +6,7 @@
 -->
 
 <ion-content padding>
-  <ion-slides (ionSlideDrag)="dragging()">
+  <ion-slides ><!--(ionSlideDrag)="dragging()"-->
     <ion-slide>
       <div class="login-box-section">
         <div class="login-box">
