--- a/src/pages/divorse-details/divorced-step1/divorced-step1.html
+++ b/src/pages/divorse-details/divorced-step1/divorced-step1.html
@@ -11,7 +11,7 @@
       <img src="assets/imgs/logo-1.jpg">
     </div>
 
-    <form (ngSubmit)="submitDetails(divorcedForm.value)" [formGroup]="divorcedForm">
+    <form [formGroup]="divorcedForm">
       <ion-list class="login-user-info">
     
         <ion-item>
@@ -97,7 +97,7 @@
           <button ion-button start round center class="login-btn" (click)="goBack()">Prev</button>
         </ion-col>
         <ion-col>
-          <button ion-button round center class="login-btn">Next</button>
+          <button ion-button round center class="login-btn" (click)="submitDetails(divorcedForm.value)">Next</button>
         </ion-col>
       </ion-row>
     </form>
