--- a/src/pages/divorse-details/divorced-step3/divorced-step3.html
+++ b/src/pages/divorse-details/divorced-step3/divorced-step3.html
@@ -12,7 +12,7 @@
             <img src="assets/imgs/logo-1.jpg">
         </div>
 
-        <form [formGroup]="divorcedForm" (ngSubmit)="submitDetails(divorcedForm.value)">
+        <form [formGroup]="divorcedForm">
           <ion-list class="login-user-info">		  
   
 			<ion-item>
@@ -93,7 +93,7 @@
 			<button ion-button start round center class="login-btn" (click)="goBack()">Prev</button>
 			</ion-col>
 			<ion-col>
-			<button ion-button round center class="login-btn">Next</button>
+			<button ion-button round center class="login-btn" (click)="submitDetails(divorcedForm.value)">Next</button>
 			</ion-col>
 		</ion-row>
     </form>
