--- a/src/pages/job-details/job-details.html
+++ b/src/pages/job-details/job-details.html
@@ -15,7 +15,7 @@
 
   <div class="login-box-section">
       <div class="login-box">
-          <form [formGroup]="jobDetailsForm" (ngSubmit)="submitDetails(jobDetailsForm.value)">
+          <form [formGroup]="jobDetailsForm">
             <ion-list class="login-user-info">
                 <ion-item>
                     <ion-label>
@@ -144,7 +144,7 @@
                   <button ion-button start round center class="login-btn" (click)="goBack()">Prev</button>
                 </ion-col>
                 <ion-col>
-                  <button ion-button round center class="login-btn">Next</button>
+                  <button ion-button round center class="login-btn" (click)="submitDetails(jobDetailsForm.value)">Next</button>
                 </ion-col>
               </ion-row>
         </form>
