--- a/src/pages/otp/otp.html
+++ b/src/pages/otp/otp.html
@@ -45,7 +45,7 @@
 
 
 
-          <button ion-button round center class="login-btn">OTP</button>
+          <button ion-button round center class="login-btn">Verify OTP</button>
         </form>
       </div>
     </span>
