--- a/src/pages/business-details/business-step1/business-step1.html
+++ b/src/pages/business-details/business-step1/business-step1.html
@@ -16,7 +16,7 @@
   <div class="login-box-section">
       <div class="login-box">
 
-          <form [formGroup]="businessForm" (ngSubmit)="submitDetails(businessForm.value)">
+          <form [formGroup]="businessForm">
             <ion-list class="login-user-info">
               <ion-row class="gender-box">
                 <span *ngIf="selfie; else elseBlock">
@@ -118,7 +118,7 @@
                 <button ion-button start round center class="login-btn" (click)="goBack()">Prev</button>
               </ion-col>
               <ion-col>
-                <button ion-button round center class="login-btn">Next</button>
+                <button ion-button round center class="login-btn" (click)="submitDetails(businessForm.value)">Next</button>
               </ion-col>
             </ion-row>
         </form>
