--- a/src/pages/business-details/business-step2/business-step2.html
+++ b/src/pages/business-details/business-step2/business-step2.html
@@ -15,7 +15,7 @@
 
   <div class="login-box-section">
       <div class="login-box">
-        <form [formGroup]="businessForm" (ngSubmit)="submitDetails(businessForm.value)">
+        <form [formGroup]="businessForm">
           <ion-list class="login-user-info">
             <ion-item>
               <ion-label>
@@ -99,7 +99,7 @@
                 <button ion-button start round center class="login-btn" (click)="goBack()">Prev</button>
               </ion-col>
               <ion-col>
-                <button ion-button round center class="login-btn">Next</button>
+                <button ion-button round center class="login-btn" (click)="submitDetails(businessForm.value)">Next</button>
               </ion-col>
             </ion-row>
         </form>
