add user and news pages

--- a/src/pages/user/user-list/user-list.html
+++ b/src/pages/user/user-list/user-list.html
@@ -8,7 +8,7 @@
                   </div>
               </ion-col>
               <ion-col col-8>
-                  <h2 class="header-title-2">News</h2>
+                  <h2 class="header-title-2">User List</h2>
 
               </ion-col>
               <ion-col col-2>
@@ -26,8 +26,8 @@
 
 
   <!-- <div class="bg-blue">
-    <h3 class="title-bg-blue">Upcoming News</h3>
-</div> -->
+      <h3 class="title-bg-blue">Upcoming News</h3>
+  </div> -->
 
 
 
@@ -40,10 +40,9 @@
                           <img src="assets/imgs/new-img-1.jpg">
                       </div>
 
-                      <div class="new-cuntent-box" (click)="gotoDetails()">
-                          <h3>News Headline</h3>
-                          <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
-                          </p>
+                      <div class="new-cuntent-box">
+                          <h3>User Name</h3>
+                          <div class="date-box"> </div>
                       </div>
                   </div>
 
@@ -55,9 +54,8 @@
                       </div>
 
                       <div class="new-cuntent-box">
-                          <h3>News Headline</h3>
-                          <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
-                          </p>
+                          <h3>User Name</h3>
+                          <div class="date-box"> </div>
                       </div>
                   </div>
 
@@ -69,9 +67,8 @@
                       </div>
 
                       <div class="new-cuntent-box">
-                          <h3>News Headline</h3>
-                          <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
-                          </p>
+                          <h3>User Name</h3>
+                          <div class="date-box"> </div>
                       </div>
                   </div>
 
@@ -84,9 +81,8 @@
                       </div>
 
                       <div class="new-cuntent-box">
-                          <h3>News Headline</h3>
-                          <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
-                          </p>
+                          <h3>User Name</h3>
+                          <div class="date-box"> </div>
                       </div>
                   </div>
 
@@ -98,9 +94,8 @@
                       </div>
 
                       <div class="new-cuntent-box">
-                          <h3>News Headline</h3>
-                          <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
-                          </p>
+                          <h3>User Name</h3>
+                          <div class="date-box"> </div>
                       </div>
                   </div>
 
@@ -112,9 +107,8 @@
                       </div>
 
                       <div class="new-cuntent-box">
-                          <h3>News Headline</h3>
-                          <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
-                          </p>
+                          <h3>User Name</h3>
+                          <div class="date-box"> </div>
                       </div>
                   </div>
 
