Back arrow issue resolved

--- a/src/pages/news-details/news-details.html
+++ b/src/pages/news-details/news-details.html
@@ -1,26 +1,26 @@
 <ion-header>
-  <ion-navbar>
-      <ion-grid class="no-padding">
-          <ion-row>
-              <ion-col col-2>
-                  <div class="back-icon-img">
-                      <img src="assets/imgs/back-arrow.png">
-                  </div>
-              </ion-col>
-              <ion-col col-8>
-                  <h2 class="header-title-2">News Info</h2>
-
-              </ion-col>
-              <ion-col col-2>
-                  <div class="menu-list-img">
-                      <img src="assets/imgs/list-icon.png">
-                  </div>
-              </ion-col>
-          </ion-row>
-      </ion-grid>
-
-  </ion-navbar>
-</ion-header>
+    <ion-navbar>
+        <ion-grid class="no-padding">
+            <ion-row>
+                <ion-col col-2>
+                    <!-- <div class="back-icon-img">
+                        <img src="assets/imgs/back-arrow.png">
+                    </div> -->
+                </ion-col>
+                <ion-col col-8>
+                    <h2 class="header-title-2">News Details</h2>
+  
+                </ion-col>
+                <ion-col col-2>
+                    <div class="menu-list-img">
+                        <img src="assets/imgs/list-icon.png">
+                    </div>
+                </ion-col>
+            </ion-row>
+        </ion-grid>
+  
+    </ion-navbar>
+  </ion-header>
 
 <ion-content>
   <div class="pad-page-10 mrg-t-15">
