last commit of branch

--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -1,7 +1,7 @@
 <ion-tabs  id="tabs">
   <ion-tab [root]="tab1Root" tabTitle="Home" tabIcon="home"  enabled="{{tabsEnabled}}"></ion-tab>
-  <ion-tab [root]="tab2Root" tabTitle="About" tabIcon="information-circle"  enabled="{{tabsEnabled}}"></ion-tab>
-  <ion-tab [root]="tab3Root" tabTitle="Contact" tabIcon="contacts"  enabled="{{tabsEnabled}}"></ion-tab>
-  <ion-tab [root]="tab4Root" tabTitle="Posts" tabIcon="heart"  enabled="{{tabsEnabled}}"></ion-tab>
+  <ion-tab [root]="tab2Root" tabTitle="User" tabIcon="contacts"  enabled="{{tabsEnabled}}"></ion-tab>
+  <ion-tab [root]="tab3Root" tabTitle="Matrimonial" tabIcon="heart"  enabled="{{tabsEnabled}}"></ion-tab>
+  <ion-tab [root]="tab4Root" tabTitle="Business" tabIcon="ios-list-box"  enabled="{{tabsEnabled}}"></ion-tab>
   <ion-tab [root]="tab5Root" tabTitle="News" tabIcon="paper"  enabled="{{tabsEnabled}}"></ion-tab>
 </ion-tabs>
