search added at userlist

--- a/src/pages/user/user-list/user-list.html
+++ b/src/pages/user/user-list/user-list.html
@@ -3,9 +3,9 @@
       <ion-grid class="no-padding">
           <ion-row>
               <ion-col col-2>
-                  <div class="back-icon-img">
+                  <!-- <div class="back-icon-img">
                       <img src="assets/imgs/back-arrow.png">
-                  </div>
+                  </div> -->
               </ion-col>
               <ion-col col-8>
                   <h2 class="header-title-2">User List</h2>
@@ -20,6 +20,10 @@
       </ion-grid>
 
   </ion-navbar>
+  <div class="search-box">
+    <ion-searchbar></ion-searchbar>
+
+</div>
 </ion-header>
 
 <ion-content>
