last commit of branch

--- a/src/pages/user/user-list/user-list.html
+++ b/src/pages/user/user-list/user-list.html
@@ -37,7 +37,47 @@
 
   <div class="pad-page-10 mrg-t-15">
       <ion-grid class="">
-          <ion-row>
+          <ion-row><!-- *ngFor="let item of userlist"-->>
+              <div class="new-box">
+                  <div class="new-img-box">
+                      <div class="img-box">
+                          <img src="assets/imgs/new-img-1.jpg">
+                      </div>
+
+                      <div class="new-cuntent-box">
+                          <h3>User Name</h3><!--{{item.email}}-->
+                          <div class="date-box"> </div>
+                      </div>
+                  </div>
+
+              </div>
+              <!---<div class="new-box">
+                  <div class="new-img-box">
+                      <div class="img-box">
+                          <img src="assets/imgs/new-img-1.jpg">
+                      </div>
+
+                      <div class="new-cuntent-box">
+                          <h3>User Name</h3>
+                          <div class="date-box"> </div>
+                      </div>
+                  </div>
+
+              </div>
+              <div class="new-box">
+                  <div class="new-img-box">
+                      <div class="img-box">
+                          <img src="assets/imgs/new-img-1.jpg">
+                      </div>
+
+                      <div class="new-cuntent-box">
+                          <h3>User Name</h3>
+                          <div class="date-box"> </div>
+                      </div>
+                  </div>
+
+              </div>
+
               <div class="new-box">
                   <div class="new-img-box">
                       <div class="img-box">
@@ -76,47 +116,7 @@
                       </div>
                   </div>
 
-              </div>
-
-              <div class="new-box">
-                  <div class="new-img-box">
-                      <div class="img-box">
-                          <img src="assets/imgs/new-img-1.jpg">
-                      </div>
-
-                      <div class="new-cuntent-box">
-                          <h3>User Name</h3>
-                          <div class="date-box"> </div>
-                      </div>
-                  </div>
-
-              </div>
-              <div class="new-box">
-                  <div class="new-img-box">
-                      <div class="img-box">
-                          <img src="assets/imgs/new-img-1.jpg">
-                      </div>
-
-                      <div class="new-cuntent-box">
-                          <h3>User Name</h3>
-                          <div class="date-box"> </div>
-                      </div>
-                  </div>
-
-              </div>
-              <div class="new-box">
-                  <div class="new-img-box">
-                      <div class="img-box">
-                          <img src="assets/imgs/new-img-1.jpg">
-                      </div>
-
-                      <div class="new-cuntent-box">
-                          <h3>User Name</h3>
-                          <div class="date-box"> </div>
-                      </div>
-                  </div>
-
-              </div>
+              </div>-->
           </ion-row>
       </ion-grid>
 
